# complex

./: .editorconfig  .env.example  .gitignore  Complex — що виправити в прайсі.csv  Makefile  README.md  problemy-v-prajsi.csv
backend/: .env.example  .gitignore  Procfile  manage.py  pyproject.toml  ruff.toml
backend/.profile.d/: google-token.sh
backend/aispecs/: admin.py  apps.py  category_specs.py  models.py  services.py
backend/aispecs/migrations/: 0001_initial.py
backend/aispecs/tests/: test_apply.py
backend/assistant/: admin.py  api.py  apps.py  client.py  conf.py  models.py  prompts.py  schemas.py  tools.py
backend/assistant/migrations/: 0001_initial.py
backend/assistant/services/: chat.py
backend/assistant/tests/: _stream.py  conftest.py  test_budget.py  test_dry_run.py  test_guards.py  test_injection.py  test_no_hallucinated_specs.py  test_prompt_cache.py  test_stream_is_async.py  test_throttle_ip.py  test_tools.py
backend/catalog/: admin.py  api.py  apps.py  enums.py  models.py  schemas.py  signals.py  tasks.py  translation.py  validators.py
backend/catalog/migrations/: 0001_initial.py  0002_initial.py  0003_price_history_trigger.py  0004_rename_price_trigger_to_complex.py  0005_product_is_incomplete_product_sku_is_surrogate.py  0006_category_media_help_text.py  0007_category_show_in_quick_nav.py
backend/catalog/services/: brands.py  cache.py  cards.py  collections.py  facets.py  hotline.py  images.py  lang.py  listing.py  merge.py  naming.py  pricing.py  search.py  search_index.py  tree.py
backend/catalog/tests/: test_admin_category_media.py  test_admin_spec_editor.py  test_brands.py  test_collections.py  test_revalidate_frontend.py  test_search_sku.py  test_spec_order.py  test_tree.py
backend/cms/: admin.py  admin_previews.py  api.py  apps.py  models.py  schemas.py  translation.py
backend/cms/migrations/: 0001_initial.py  0002_alter_banner_placement.py  0003_banner_category_verbose.py  0004_banner_focal_point.py  0005_banner_real_placements_and_crop.py  0006_topbar_menu_items.py
backend/cms/tests/: test_admin_banner_preview.py  test_admin_banners.py
backend/config/: __init__.py  api.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  heroku.py  local.py  prod.py
backend/core/: admin.py  alerts.py  middleware.py  models.py  tasks.py  translation.py
backend/core/migrations/: 0001_extensions.py  0002_initial.py  0003_rename_pg_objects_to_complex.py  0004_seed_site_contacts.py  0005_seed_working_hours.py
backend/core/tests/: admin_forms.py  test_admin_task_buttons.py  test_redis_ssl.py
backend/core/text/: __init__.py  uk_stem.py
backend/delivery/: admin.py  api.py  apps.py  client.py  models.py  tasks.py
backend/delivery/migrations/: 0001_initial.py  0002_alter_npwarehouse_category.py
backend/delivery/services/: __init__.py  calculator.py  dims.py  refs.py
backend/delivery/tests/: conftest.py  test_api.py  test_client.py  test_dims.py  test_quote.py  (+1 more)
backend/feeds/: admin.py  apps.py  generator.py  models.py  rubricator.py  services.py  tasks.py
backend/orders/: admin.py  api.py  models.py  schemas.py  tasks.py
backend/payments/: admin.py  api.py  apps.py  models.py  services.py  tasks.py
backend/sync/: admin.py  apps.py  models.py  services.py  sheets.py  tasks.py
backend/translation/: admin.py  apps.py  client.py  conf.py  models.py  prompts.py  segmentation.py  tasks.py
(+224 files in other folders)
